[workspace]

[package]
name = "mcp-procurement"
version = "1.0.0"
edition = "2024"
description = "Procurement MCP server — purchase orders, RFQs, supplier management, approvals, receiving, spend analytics, contract tracking"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-procurement"
keywords = ["mcp", "procurement", "purchase-orders", "suppliers", "rfq"]
categories = ["api-bindings"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
